tests/NormalTests/paczka1/fuzzy1/15771510.err
Error in line 1: P9uYOYCzR S424 73,5
Error in line 4: ONA6BxNMeN S740 5,6
Error in line 2: P9uYOYCzR S740 17,7
Error in line 6: J2phVKYsMs S740 50,8
Error in line 5: ONA6BxNMeN A29 87,3
Error in line 28: J2phVKYsMs A818 85,0
Error in line 32: S740 S740 -1,8
Error in line 33: rjGGVI S740 59,7
